# mao

./: .env.example  .gitignore  PYPI_SETUP.md  README.md  docker-compose.yml  mcp.json  pyproject.toml
.github/: copilot-instructions.md  setup.yml
.github/workflows/: dependency-update.yml  docker-build.yml  docker-multi-platform.yml  integration-tests.yml  monitor-actions-usage.yml  publish.yml  test-lint.yml  unit-tests.yml
docker/: Dockerfile.api
docs/: research-vector-storage-2026.md
docs/plans/: 2026-03-06-simplified-agent-api-design.md
src/mao/: __init__.py  agents.py  checkpoint.py  mcp.py  storage.py
src/mao/api/: agents.py  api.py  db.py  helpers.py  mcp.py  models.py  teams.py
tests/: conftest.py  test_agents.py  test_checkpoint.py  test_mcp.py  test_storage.py
tests/api/: __init__.py  test_agents_api.py  test_api.py  test_live_api.py  test_mcp_api.py  test_teams_api.py
